# ai-voice-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  gcp-setup.sh  tasker-setup.md
.github/workflows/: docker-build.yml
ai-server/: Dockerfile  pyproject.toml
ai-server/src/: __init__.py  audio.py  gemini_live.py  main.py  mcp_client.py  webrtc_server.py  websocket_server.py
android-app/: .gitignore  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/aivoice/: MainActivity.kt
android-app/app/src/main/java/com/example/aivoice/audio/: AudioCaptureManager.kt  AudioConfig.kt  AudioPlaybackManager.kt
android-app/app/src/main/java/com/example/aivoice/network/: ConnectionState.kt  WebSocketManager.kt
android-app/app/src/main/java/com/example/aivoice/overlay/: OverlayComponents.kt  OverlayContent.kt  OverlayLauncherActivity.kt  OverlayService.kt
android-app/app/src/main/java/com/example/aivoice/ui/: VoiceAssistantScreen.kt
android-app/app/src/main/java/com/example/aivoice/viewmodel/: VoiceAssistantViewModel.kt
android-app/app/src/main/java/io/github/ccoodduu/aivoice/: AIVoiceApplication.kt  MainActivity.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
studieplus-mcp/: .env.example  Dockerfile  README.md  deploy-cloudrun.sh  pyproject.toml
studieplus-mcp/src/mcp_server/: server.py
studieplus-mcp/src/studieplus_scraper/: gwt_deserializer.py
(+15 files in other folders)
