[project]
name = "studieplus-mcp"
version = "0.1.0"
description = "MCP Server for checking homework from Studie+ (Danish education platform)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.17.0",
]

[project.scripts]
studieplus-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server", "src/studieplus_scraper"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
